[package]
name = "cliffy"
version = "0.1.0"
authors = ["Amin Moazzen <sma.moazzen@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A geometric algebra library."
homepage = "https://github.com/AminMoazzen/cliffy"
repository = "https://github.com/AminMoazzen/cliffy"
readme = "README.md"
keywords = ["gamedev", "graphics", "math"]
categories = ["game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
